# backend/docs/swagger.json
@@ -3001,9 +3001,6 @@
                 "created_at": {
                     "type": "string"
                 },
-                "embed_code": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -3041,7 +3038,7 @@
                     "type": "string"
                 },
                 "video_type": {
-                    "description": "file, embed",
+                    "description": "file",
                     "type": "string"
                 },
                 "views": {
