# backend/internal/dto/song_dto.go
@@ -76,9 +76,7 @@ type SongDTO struct {
 
 type SongVariantVideoDTO struct {
 	VideoUrl     *string `json:"video_url,omitempty"`
-	EmbedUrl     *string `json:"embed_url,omitempty"`
 	LocalUrl     *string `json:"local_url,omitempty"`
-	EmbedCode    *string `json:"embed_code,omitempty"`
 	VideoSrc     *string `json:"video_src,omitempty"`
 	IsNC         bool    `json:"is_nc"`
 	IsBD         bool    `json:"is_bd"`
@@ -95,9 +93,7 @@ type SongVariantDTO struct {
 	VersionNumber uint64                `json:"version_number"`
 	Slug          string                `json:"slug"`
 	VideoUrl      *string               `json:"video_url,omitempty"`
-	EmbedUrl      *string               `json:"embed_url,omitempty"`
 	LocalUrl      *string               `json:"local_url,omitempty"`
-	EmbedCode     *string               `json:"embed_code,omitempty"`
 	VideoSrc      *string               `json:"video_src,omitempty"`
 	IsNC          bool                  `json:"is_nc"`
 	IsBD          bool                  `json:"is_bd"`
